--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="location">
         <h2>Lieu de Culte</h2>
-        <p>Services disponibles à votre domicile ou dans le lieu de votre choix.</p>
+        <p>Services disponibles à mon presbytère ou dans le lieu de votre choix.</p>
     </section>
 
     <footer>
