--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="welcome-text">
             <h2>Bienvenue</h2>
-            <p>Pasteur protestant ordonné, je suis au service de tous les chrétiens qui souhaitent vivre leur foi en dehors des cadres traditionnels. Ma mission est d'accompagner chaque croyant dans son cheminement spirituel, en respectant sa tradition et sa vision personnelle de la foi.</p>
+            <p>Pasteur protestant, je suis au service de tous les chrétiens qui souhaitent vivre leur foi en respectant tradition et modernité. Ma mission est d'accompagner chacun dans son cheminement spirituel, au travers des Ecritures et des outils offerts par notre Religion.</p>
         </div>
     </section>
 
