--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Révérend Constant - Services Religieux</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,6 +15,15 @@
         </div>
         <div class="collar-design"></div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html" class="active">Accueil</a></li>
+            <li><a href="agenda.html">Agenda</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="dons.html">Dons</a></li>
+        </ul>
+    </nav>
 
     <section class="intro">
         <div class="photo-container">
@@ -29,26 +38,26 @@
     <section class="services">
         <h2>Mes Services</h2>
         <div class="service-tabs">
-            <div class="service-tab">
+            <a href="mariage.html" class="service-tab">
                 <img src="mariage.jpg" alt="Mariage">
                 <h3>Mariage</h3>
-            </div>
-            <div class="service-tab">
+            </a>
+            <a href="bapteme.html" class="service-tab">
                 <img src="bapteme.jpg" alt="Baptême">
                 <h3>Baptême</h3>
-            </div>
-            <div class="service-tab">
+            </a>
+            <a href="confirmation.html" class="service-tab">
                 <img src="confirmation.jpg" alt="Confirmation">
                 <h3>Confirmation</h3>
-            </div>
-            <div class="service-tab">
+            </a>
+            <a href="enterrement.html" class="service-tab">
                 <img src="enterrement.jpg" alt="Funérailles">
                 <h3>Funérailles</h3>
-            </div>
-            <div class="service-tab">
+            </a>
+            <a href="guidance.html" class="service-tab">
                 <img src="guidance.jpg" alt="Accompagnement Spirituel">
                 <h3>Accompagnement Spirituel</h3>
-            </div>
+            </a>
         </div>
     </section>
 
