--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Révérend Constant - Services Religieux</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -15,15 +15,6 @@
         </div>
         <div class="collar-design"></div>
     </header>
-
-    <nav>
-        <ul>
-            <li><a href="index.html" class="active">Accueil</a></li>
-            <li><a href="agenda.html">Agenda</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="dons.html">Dons</a></li>
-        </ul>
-    </nav>
 
     <section class="intro">
         <div class="photo-container">
@@ -38,26 +29,36 @@
     <section class="services">
         <h2>Mes Services</h2>
         <div class="service-tabs">
-            <a href="mariage.html" class="service-tab">
-                <img src="mariage.jpg" alt="Mariage">
-                <h3>Mariage</h3>
-            </a>
-            <a href="bapteme.html" class="service-tab">
-                <img src="bapteme.jpg" alt="Baptême">
-                <h3>Baptême</h3>
-            </a>
-            <a href="confirmation.html" class="service-tab">
-                <img src="confirmation.jpg" alt="Confirmation">
-                <h3>Confirmation</h3>
-            </a>
-            <a href="enterrement.html" class="service-tab">
-                <img src="enterrement.jpg" alt="Funérailles">
-                <h3>Funérailles</h3>
-            </a>
-            <a href="guidance.html" class="service-tab">
-                <img src="guidance.jpg" alt="Accompagnement Spirituel">
-                <h3>Accompagnement Spirituel</h3>
-            </a>
+            <div class="service-tab">
+                <a href="mariage.html">
+                    <img src="mariage.jpg" alt="Mariage">
+                    <h3>Mariage</h3>
+                </a>
+            </div>
+            <div class="service-tab">
+                <a href="bapteme.html">
+                    <img src="bapteme.jpg" alt="Baptême">
+                    <h3>Baptême</h3>
+                </a>
+            </div>
+            <div class="service-tab">
+                <a href="confirmation.html">
+                    <img src="confirmation.jpg" alt="Confirmation">
+                    <h3>Confirmation</h3>
+                </a>
+            </div>
+            <div class="service-tab">
+                <a href="enterrement.html">
+                    <img src="enterrement.jpg" alt="Funérailles">
+                    <h3>Funérailles</h3>
+                </a>
+            </div>
+            <div class="service-tab">
+                <a href="guidance.html">
+                    <img src="guidance.jpg" alt="Accompagnement Spirituel">
+                    <h3>Accompagnement Spirituel</h3>
+                </a>
+            </div>
         </div>
     </section>
 
