--- a/mariage.html
+++ b/mariage.html
@@ -91,10 +91,10 @@
         <!-- Présentation -->
         <section class="presentation">
           <p>
-            Vous souhaitez vivre un mariage digne des films américains ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d’un château ou même dans une grange à l’ancienne. En tant que pasteur, j’ai à cœur de vous offrir cette liberté : tout lieu peut être consacré et devenir le cadre d’un mariage chrétien – et à fortiori, protestant – rendant ainsi l’expérience encore plus magique. Bien sûr, il est également possible d’opter pour la traditionnelle église.
+            Vous souhaitez vivre un mariage digne des films américains ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d’un château ou même dans une grange à l’ancienne. En tant que pasteur, j’ai à cœur de vous offrir cette liberté... En effet, nous pouvons consacrer tout lieu adapté afin qu'il devienne le cadre d’un mariage chrétien – et à fortiori, protestant – rendant ainsi l’expérience encore plus magique. Bien sûr, il est également possible d’opter pour une église, si tel est votre choix.
           </p>
           <p>
-            Cette approche me permet de ne pas avoir à fournir de salle, réduisant ainsi les délais d’attente et évitant de reporter un moment si important, tout en allégeant l’organisation.
+            Cette approche plus ouverte me permet de réduire ainsi les délais d’attente et d'éviter de reporter un moment si important, tout en allégeant l’organisation.
           </p>
         </section>
         <!-- Organisation du mariage -->
@@ -104,10 +104,10 @@
             L’organisation se déroule de manière fluide et personnalisée : 
           </p>
           <ul>
-            <li>Accueil chaleureux et cérémonie personnalisée</li>
-            <li>Célébration en extérieur ou dans un cadre atypique</li>
             <li>Préparation préalable (virtuelle ou à mon presbytère)</li>
-            <li>Remise d’un certificat officiel enregistré au Livre des Actes</li>
+            <li>Personnalisiation de la Cérémonie</li>
+            <li>Célébration en intérieur ou extérieur</li>
+            <li>Remise de votre certificat de mariage, enregistré au Livre des Actes</li>
           </ul>
         </section>
         <!-- Tarifs et conditions -->
@@ -115,18 +115,18 @@
           <h2>Tarifs & Conditions</h2>
           <p>
             <strong>200€ :</strong> Version classique avec préparation virtuelle, communication des documents, personnalisation de certains chants et vœux, célébration le jour J, remise du certificat et enregistrement.<br>
-            <strong>250€ :</strong> Même formule mais avec fourniture de tout le matériel (hors hôtel).<br>
+            <strong>250€ :</strong> Même formule mais avec fourniture de tout le matériel (hors autel).<br>
             <strong>300€ :</strong> Forfait incluant la préparation à mon presbytère près de Waterloo.<br>
-            <em>Note :</em> Un supplément de 50€ sera appliqué si le lieu de célébration se situe en dehors du Brabant wallon.
+            <em>Note :</em> Remarque: un supplément de 50€ sera appliqué si le lieu de célébration se situe en dehors du Brabant wallon.
           </p>
           <p>
-            Pensez à prévoir un témoin par fiancé, un lecteur désigné, une preuve du mariage civil ainsi qu’un hôtel équipé (table pour la Bible, pupitre, système hifi avec micro).
+            Pensez à prévoir un témoin par fiancé, un lecteur désigné, une preuve du mariage civil ainsi qu’un autel équipé (table pour la Bible, pupitre, système hifi avec micro).
           </p>
           <p>
             J'officie en soutane et selon un rite œcuménique respectant à la fois la liturgie protestante et catholique.
           </p>
           <p>
-            Pour toute question ou réservation par téléphone, n’hésitez pas à me contacter par GSM.
+            N'hésitez pas à me contacter sur mon GSM si vous avez des questions, idéalement par message.
           </p>
         </section>
         <!-- Agenda de réservation -->
@@ -134,7 +134,7 @@
           <h2>Réservez votre date</h2>
           <p>
             Veuillez choisir une date disponible pour votre cérémonie.<br>
-            <em>Attention :</em> Seules les dates à partir de 63 jours dans le futur sont réservables, et je suis disponible uniquement les samedis, dimanches, lundis et mercredis.
+            <em>Attention :</em>je suis disponible uniquement les lundis, mercredis et samedis.
           </p>
           <input type="date" id="datePicker">
           <button id="bookButton">Réserver</button>
