--- a/dons.html
+++ b/dons.html
@@ -29,7 +29,7 @@
                 <!-- Bouton PayPal - Remplacez avec votre propre code PayPal -->
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_donations" />
-                    <input type="hidden" name="business" value="VOTRE_EMAIL_PAYPAL" />
+                    <input type="hidden" name="business" value="constantvanguard@gmail.com" />
                     <input type="hidden" name="currency_code" value="EUR" />
                     <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Bouton Faire un don avec PayPal" />
                 </form>
