--- a/agenda.html
+++ b/agenda.html
@@ -22,7 +22,7 @@
         <section id="calendar">
             <h2>Calendrier des événements</h2>
             <!-- Intégration Google Calendar -->
-            <iframe src="https://calendar.google.com/calendar/embed?src=VOTRE_ID_CALENDRIER@group.calendar.google.com" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=constantvanguard@gmail.com" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
             
             <p>Vous pouvez également consulter nos prochains événements ci-dessous :</p>
             
