--- a/mariage.html
+++ b/mariage.html
@@ -44,7 +44,7 @@
     section {
       margin-bottom: 20px;
     }
-    /* Styles pour l’agenda */
+    /* Styles pour l'agenda */
     .agenda input[type="date"] {
       padding: 5px;
       font-size: 1em;
@@ -91,17 +91,17 @@
         <!-- Présentation -->
         <section class="presentation">
           <p>
-            Vous souhaitez vivre un mariage digne des films américains ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d’un château ou même dans une grange à l’ancienne. En tant que pasteur, j’ai à cœur de vous offrir cette liberté... En effet, nous pouvons consacrer tout lieu adapté afin qu'il devienne le cadre d’un mariage chrétien – et à fortiori, protestant – rendant ainsi l’expérience encore plus magique. Bien sûr, il est également possible d’opter pour une église, si tel est votre choix.
+            Vous souhaitez vivre un mariage digne des films américains ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d'un château ou même dans une grange à l'ancienne. En tant que pasteur, j'ai à cœur de vous offrir cette liberté... En effet, nous pouvons consacrer tout lieu adapté afin qu'il devienne le cadre d'un mariage chrétien – et à fortiori, protestant – rendant ainsi l'expérience encore plus magique. Bien sûr, il est également possible d'opter pour une église, si tel est votre choix.
           </p>
           <p>
-            Cette approche plus ouverte me permet de réduire ainsi les délais d’attente et d'éviter de reporter un moment si important, tout en allégeant l’organisation.
+            Cette approche plus ouverte me permet de réduire ainsi les délais d'attente et d'éviter de reporter un moment si important, tout en allégeant l'organisation.
           </p>
         </section>
         <!-- Organisation du mariage -->
         <section class="details">
           <h2>Organisation du mariage le jour J</h2>
           <p>
-            L’organisation se déroule de manière fluide et personnalisée : 
+            L'organisation se déroule de manière fluide et personnalisée : 
           </p>
           <ul>
             <li>Préparation préalable (virtuelle ou à mon presbytère)</li>
@@ -120,7 +120,7 @@
             <em>Note :</em> Remarque: un supplément de 50€ sera appliqué si le lieu de célébration se situe en dehors du Brabant wallon.
           </p>
           <p>
-            Pensez à prévoir un témoin par fiancé, un lecteur désigné, une preuve du mariage civil ainsi qu’un autel équipé (table pour la Bible, pupitre, système hifi avec micro).
+            Pensez à prévoir un témoin par fiancé, un lecteur désigné, une preuve du mariage civil ainsi qu'un autel équipé (table pour la Bible, pupitre, système hifi avec micro).
           </p>
           <p>
             J'officie en soutane et selon un rite œcuménique respectant à la fois la liturgie protestante et catholique.
@@ -140,13 +140,17 @@
           <button id="bookButton">Réserver</button>
           <div id="message" style="margin-top:10px; color: #b00;"></div>
           <div id="paypalButton" style="display:none;">
-  <style>.pp-NKB3GZY692Y5U{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-  <form action="https://www.paypal.com/ncp/payment/NKB3GZY692Y5U" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-    <input class="pp-NKB3GZY692Y5U" type="submit" value="Acompte 100€" />
-    <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-    <section> Optimisé par <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-  </form>
-</div>
+            <!-- Bouton PayPal correctement configuré avec votre adresse email -->
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="constantvanguard@gmail.com">
+              <input type="hidden" name="item_name" value="Acompte Mariage">
+              <input type="hidden" name="amount" value="100.00">
+              <input type="hidden" name="currency_code" value="EUR">
+              <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - La solution de paiement en ligne la plus simple et la plus sécurisée !">
+              <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
+            </form>
+          </div>
         </section>
       </div>
     </div>
