--- a/mariage.html
+++ b/mariage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mariage – Révérend</title>
+  <title>Votre Mariage, un Moment Unique, une Promesse Devant Dieu</title>
   <style>
     /* Mise en page de base */
     body {
