--- a/mariage.html
+++ b/mariage.html
@@ -7,7 +7,7 @@
   <style>
     /* Mise en page de base */
     body {
-      font-family: Arial, sans-serif;
+      font-family: harrington;
       margin: 0;
       padding: 0;
       line-height: 1.6;
