--- a/mariage.html
+++ b/mariage.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <header>
-    <h1>Mariage Révérend</h1>
+    <h1>Votre Mariage</h1>
   </header>
   <main>
     <div class="container">
