--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
         
         .profile-photo {
-            max-width: 42%; /* Réduit à 42% (d'abord 40% puis 30% de réduction supplémentaire) */
+            max-width: 30%; /* Réduit à 30% */
             height: auto;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
