--- a/bapteme.html
+++ b/bapteme.html
@@ -296,15 +296,12 @@
                     Le baptême est l'un des sacrements les plus importants de la foi chrétienne, symbolisant la renaissance spirituelle et l'entrée dans la communauté des croyants. En tant que pasteur protestant, j'offre un service de baptême intime et personnalisé qui se déroule exclusivement à mon presbytère, un lieu empreint de spiritualité et propice au recueillement, situé à 10 minutes de Waterloo.
                 </p>
                 <p>
-                    Cette cérémonie marque le début d'un cheminement spirituel, que ce soit pour un enfant ou un adulte. Elle représente l'alliance entre Dieu et le baptisé, ainsi que l'engagement de la communauté à l'accompagner dans sa foi.
+                    Les baptêmes que je célèbre, bien que protestants, suivent un rite œcuménique reconnu par l'Église catholique. Cette harmonie entre traditions garantit une cérémonie respectueuse et universellement acceptée.
                 </p>
                 <p>
                     Le baptême permet de rentrer ou faire rentrer son enfant dans la communauté chrétienne. C'est ouvrir une porte qui mènera vers un chemin que le baptisé prendra ou non, dans son libre arbitre, mais qui lui est offerte ou que la personne s'offre pour avancer dans la direction du Christ.
                 </p>
-                <p>
-                    Selon les règles Œcuméniques actuellement en vigueur, les baptêmes protestants effectués selon un rite conforme au rite catholique (ce qui est mon cas) sont reconnus par l'Église catholique, l'inverse étant également vrai.
-                </p>
-                
+                               
                 <h3 class="section-title">Organisation du baptême</h3>
                 <p>
                     La préparation au baptême commence par l'envoi d'informations sur le fait de baptiser son enfant ou de demander le baptême pour soi, avec les éléments fondamentaux à connaître pour confirmer la demande de baptême.
