--- a/bapteme.html
+++ b/bapteme.html
@@ -290,17 +290,17 @@
                 <img src="bapteme3.jpg" alt="Baptême – Photo 3">
             </div>
             
-            <div class="text-column">
-                <h3 class="section-title">Présentation</h3>
-                <p>
-                    Le baptême est l'un des sacrements les plus importants de la foi chrétienne, symbolisant la renaissance spirituelle et l'entrée dans la communauté des croyants. En tant que pasteur protestant, j'offre un service de baptême intime et personnalisé qui se déroule exclusivement à mon presbytère, un lieu empreint de spiritualité et propice au recueillement, situé à 10 minutes de Waterloo.
-                </p>
-                <p>
-                    Les baptêmes que je célèbre, bien que protestants, suivent un rite œcuménique reconnu par l'Église catholique. Cette harmonie entre traditions garantit une cérémonie respectueuse et universellement acceptée.
-                </p>
-                <p>
-                    Le baptême permet de rentrer ou faire rentrer son enfant dans la communauté chrétienne. C'est ouvrir une porte qui mènera vers un chemin que le baptisé prendra ou non, dans son libre arbitre, mais qui lui est offerte ou que la personne s'offre pour avancer dans la direction du Christ.
-                </p>
+          <div class="text-column">
+    <h3 class="section-title">Présentation</h3>
+    <p>
+        Le baptême est un sacrement fondamental de la foi chrétienne, marquant une nouvelle naissance spirituelle et l'entrée dans la communauté des croyants. En tant que pasteur protestant, je propose des cérémonies uniques et adaptées, célébrées exclusivement à mon presbytère, un lieu paisible et propice au recueillement, situé à 10 minutes de Waterloo.
+    </p>
+    <p>
+        Bien que protestants, les baptêmes que je célèbre respectent un rite œcuménique reconnu par l'Église catholique, garantissant une cérémonie en harmonie avec les deux traditions.
+    </p>
+    <p>
+        Le baptême ouvre la voie à la communauté chrétienne, offrant au baptisé, enfant ou adulte, la liberté de suivre un chemin spirituel guidé par l'amour du Christ.
+    </p>
                                
                 <h3 class="section-title">Organisation du baptême</h3>
                 <p>
