--- a/confirmation.html
+++ b/confirmation.html
@@ -303,13 +303,14 @@
             </div>
 
             <div class="text-column">
-                <h3 class="section-title">Présentation</h3>
-                <p>
-                    La cérémonie de confirmation est habituellement organisée pour les jeunes à 12 ans, mais aussi pour tout chrétien souhaitant un retour vers la foi. L'objectif est d'apprendre à vivre selon les Écritures pour avancer vers le Christ, apportant des valeurs et des repères dans une société déconnectée de la religion. Pour les enfants, c'est une instruction pour démarrer leur vie, et pour les adultes, c'est l'occasion de corriger leur vie selon les Écritures.
-                </p>
-                <p>
-                    Les modalités sont les mêmes pour les jeunes et les adultes, avec une formation séparée pour adapter le langage.
-                </p>
+    <h3 class="section-title">Présentation</h3>
+    <p>
+        La cérémonie de confirmation marque une étape fondamentale dans la vie chrétienne, traditionnellement célébrée à l'âge de 12 ans, mais également accessible à tout fidèle en quête de renouveau spirituel. Cette démarche permet d'acquérir les principes essentiels des Écritures pour cheminer vers le Christ, offrant un cadre de valeurs et de repères justes dans notre société contemporaine. Pour les jeunes, c'est le fondement d'une vie guidée par les enseignements bibliques, tandis que pour les adultes, c'est l'opportunité de réaligner leur parcours selon la sagesse des Écritures.
+    </p>
+    <p>
+        Le processus de confirmation reste identique pour tous, avec des sessions de formation distinctes permettant d'adapter la pédagogie à chaque groupe d'âge.
+    </p>
+</div>
 
                 <h3 class="section-title">Organisation de la Confirmation</h3>
                 <p>
