Add spiritual guidance page and update site navigation
Add spiritual guidance page and update site navigation

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="agenda.html">Agenda</a></li>
                 <li><a href="dons.html">Faire un don</a></li>
+                <li><a href="accompagnement-spirituel.html">Accompagnement Spirituel</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
