--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </a>
             </div>
             <div class="service-tab">
-                <a href="guidance.html">
+                <a href="accompagnement-spirituel.html">
                     <img src="guidance.jpg" alt="Accompagnement Spirituel">
                     <h3>Accompagnement Spirituel</h3>
                 </a>
