--- a/confirmation.html
+++ b/confirmation.html
@@ -368,6 +368,7 @@
             <a href="index.html">Accueil</a>
             <a href="agenda.html">Agenda</a>
             <a href="dons.html">Faire un don</a>
+            <a href="accompagnement-spirituel.html">Accompagnement Spirituel</a>
             <a href="contact.html">Contact</a>
         </div>
         <p>&copy; 2025 Révérend Constant. Tous droits réservés.</p>
