--- a/mariage.html
+++ b/mariage.html
@@ -297,9 +297,9 @@
         
         <div class="content-container">
             <div class="image-column">
-                <img src="image1.jpg" alt="Mariage – Photo 1">
-                <img src="image2.jpg" alt="Mariage – Photo 2">
-                <img src="image3.jpg" alt="Mariage – Photo 3">
+                <img src="mariage1.jpg" alt="Mariage – Photo 1">
+                <img src="mariage2.jpg" alt="Mariage – Photo 2">
+                <img src="mariage3.jpg" alt="Mariage – Photo 3">
             </div>
             
             <div class="text-column">
