--- a/enterrement.html
+++ b/enterrement.html
@@ -297,9 +297,9 @@
         
         <div class="content-container">
             <div class="image-column">
-                <img src="enterrement.jpg" alt="Funérailles – Photo 1">
-                <img src="image2.jpg" alt="Funérailles – Photo 2">
-                <img src="image3.jpg" alt="Funérailles – Photo 3">
+                <img src="enterrement1.jpg" alt="Funérailles – Photo 1">
+                <img src="enterrement2.jpg" alt="Funérailles – Photo 2">
+                <img src="enterrement3.jpg" alt="Funérailles – Photo 3">
             </div>
             
             <div class="text-column">
