--- a/bapteme.html
+++ b/bapteme.html
@@ -272,13 +272,15 @@
     </style>
 </head>
 <body>
-    <header>
+<header>
+    <a href="index.html" style="text-decoration: none; color: inherit;">
         <div class="header-content">
             <img src="logo.png" alt="Logo" class="logo">
             <h1>Révérend Constant</h1>
         </div>
-        <div class="collar-design"></div>
-    </header>
+    </a>
+    <div class="collar-design"></div>
+</header>
 
     <div class="main-content">
         <h2 class="page-title">Baptême</h2>
