--- a/mariage.html
+++ b/mariage.html
@@ -285,12 +285,14 @@
 </head>
 <body>
     <header>
+    <a href="index.html" style="text-decoration: none; color: inherit;">
         <div class="header-content">
             <img src="logo.png" alt="Logo" class="logo">
             <h1>Révérend Constant</h1>
         </div>
-        <div class="collar-design"></div>
-    </header>
+    </a>
+    <div class="collar-design"></div>
+</header>
 
     <div class="main-content">
         <h2 class="page-title">Mariage</h2>
