Add guidance-spirituelle.html and make header consistent across pages
Add guidance-spirituelle.html and make header consistent across pages

--- a/confirmation.html
+++ b/confirmation.html
@@ -284,15 +284,15 @@
     </style>
 </head>
 <body>
-  <header>
-    <a href="index.html" style="text-decoration: none; color: inherit;">
-        <div class="header-content">
-            <img src="logo.png" alt="Logo" class="logo">
-            <h1>Révérend Constant</h1>
-        </div>
-    </a>
-    <div class="collar-design"></div>
-</header>
+    <header>
+        <a href="index.html" style="text-decoration: none; color: inherit;">
+            <div class="header-content">
+                <img src="logo.png" alt="Logo" class="logo">
+                <h1>Révérend Constant</h1>
+            </div>
+        </a>
+        <div class="collar-design"></div>
+    </header>
 
     <div class="main-content">
         <h2 class="page-title">Confirmation</h2>
@@ -305,14 +305,23 @@
             </div>
 
             <div class="text-column">
-    <h3 class="section-title">Présentation</h3>
-    <p>
-        La cérémonie de confirmation marque une étape fondamentale dans la vie chrétienne, traditionnellement célébrée à l'âge de 12 ans, mais également accessible à tout fidèle en quête de renouveau spirituel. Cette démarche permet d'acquérir les principes essentiels des Écritures pour cheminer vers le Christ, offrant un cadre de valeurs et de repères justes dans notre société contemporaine. Pour les jeunes, c'est le fondement d'une vie guidée par les enseignements bibliques, tandis que pour les adultes, c'est l'opportunité de réaligner leur parcours selon la sagesse des Écritures.
-    </p>
-    <p>
-        Le processus de confirmation reste identique pour tous, avec des sessions de formation distinctes permettant d'adapter la pédagogie à chaque groupe d'âge.
-    </p>
-</div>
+                <h2>Confirmation</h2>
+                <p>La cérémonie de confirmation marque une étape fondamentale dans la vie chrétienne, traditionnellement célébrée à l'âge de 12 ans, mais également accessible à tout fidèle en quête de renouveau spirituel. Cette démarche permet d'acquérir les principes essentiels des Écritures pour cheminer vers le Christ, offrant un cadre de valeurs et de repères justes dans notre société contemporaine. Pour les jeunes, c'est le fondement d'une vie guidée par les enseignements bibliques, tandis que pour les adultes, c'est l'opportunité de réaligner leur parcours selon la sagesse des Écritures.</p>
+                <p>Le processus de confirmation reste identique pour tous, avec des sessions de formation distinctes permettant d'adapter la pédagogie à chaque groupe d'âge.</p>
+                <h3>Déroulement</h3>
+                <p>L'organisation se déroule de manière personnalisée :</p>
+                <ul>
+                    <li>Préparation préalable (virtuelle ou à mon presbytère)</li>
+                    <li>Formation adaptée aux jeunes et aux adultes</li>
+                    <li>Célébration en intérieur ou extérieur</li>
+                    <li>Remise de votre certificat de confirmation, enregistré au Livre des Actes</li>
+                </ul>
+                <h3>Tarifs</h3>
+                <p><strong>250€ :</strong> Prix pour jusqu'à 3 personnes. Pour les groupes, le prix est fixé au moment de la demande.</p>
+                <p>Un acompte de <strong>100€</strong> est demandé à la réservation.</p>
+                <p>N'hésitez pas à me contacter sur mon GSM si vous avez des questions, idéalement par message.</p>
+                <a href="agenda.html" class="cta-button">Réserver un rendez-vous</a>
+            </div>
 
                 <h3 class="section-title">Organisation de la Confirmation</h3>
                 <p>
