--- a/index.html
+++ b/index.html
@@ -339,13 +339,12 @@
         <p>Services disponibles à mon presbytère ou dans le lieu de votre choix.</p>
     </section>
 
-    <footer>
-        <div class="footer-links">
-            <a href="agenda.html">Agenda</a>
-            <a href="dons.html">Faire un don</a>
-            <a href="contact.html">Contact</a>
-        </div>
-        <p>&copy; 2025 Révérend Constant. Tous droits réservés.</p>
-    </footer>
+   <footer>
+    <div class="footer-links">
+        <a href="index.html">Accueil</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <p>&copy; 2025 Révérend Constant. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
