--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
     <section class="location">
         <h2>Lieu de Culte</h2>
-        <p>Services disponibles à mon presbytère ou dans le lieu de votre choix.</p>
+        <p>Services disponibles à mon presbytère (à 10 minutes de Waterloo), en déplacement ou par visioconférence. .</p>
     </section>
 
    <footer>
