--- a/confirmation.html
+++ b/confirmation.html
@@ -296,7 +296,7 @@
 
     <div class="main-content">
         <div class="page-title-container">
-            <h2 class="page-title">Confirmation</h2>
+            <h2 class="page-title">Baptême</h2>
             <div class="hamburger-menu">
                 <button id="hamburger-button" aria-label="Menu">
                     <span></span>
@@ -315,6 +315,7 @@
                     </ul>
                 </nav>
             </div>
+        </div>
         </div>
         
         <div class="content-container">
