--- a/confirmation.html
+++ b/confirmation.html
@@ -281,6 +281,77 @@
                 flex: 1 1 100%;
             }
         }
+        
+        /* Styles pour le bouton hamburger et le menu mobile */
+        .page-title-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+
+        .hamburger-menu {
+            position: relative;
+        }
+
+        #hamburger-button {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 30px;
+            height: 21px;
+            background: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 0;
+            z-index: 10;
+        }
+
+        #hamburger-button span {
+            width: 100%;
+            height: 3px;
+            background-color: #333;
+            border-radius: 3px;
+            transition: all 0.3s linear;
+        }
+
+        #mobile-menu {
+            position: absolute;
+            top: 40px;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 5px;
+            padding: 10px;
+            z-index: 5;
+            min-width: 200px;
+        }
+
+        #mobile-menu.hidden {
+            display: none;
+        }
+
+        #mobile-menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        #mobile-menu li {
+            margin: 10px 0;
+        }
+
+        #mobile-menu a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            display: block;
+            padding: 5px 10px;
+        }
+
+        #mobile-menu a:hover {
+            background-color: #f5f5f5;
+        }
     </style>
 </head>
 <body>
@@ -296,7 +367,7 @@
 
     <div class="main-content">
         <div class="page-title-container">
-            <h2 class="page-title">Baptême</h2>
+            <h2 class="page-title">Confirmation</h2>
             <div class="hamburger-menu">
                 <button id="hamburger-button" aria-label="Menu">
                     <span></span>
@@ -315,7 +386,6 @@
                     </ul>
                 </nav>
             </div>
-        </div>
         </div>
         
         <div class="content-container">
