--- a/contact.html
+++ b/contact.html
@@ -284,10 +284,10 @@
                     <p><strong>Email :</strong> constantvanguard@gmail.com</p>
                 </div>
                 <p style="margin-top: 20px;">
-                    Pour une réponse rapide, privilégiez les messages texte ou WhatsApp.
+                    Pour une réponse rapide, privilégiez un appel téléphonique ou un message WhatsApp.
                 </p>
                 <p>
-                    Je suis disponible pour des consultations virtuelles ou en personne à mon presbytère près de Waterloo.
+                    Je suis disponible à mon presbytère près de Waterloo, en déplacement ou en visionconférence si besoin.
                 </p>
             </div>
             
