--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
 
     <section class="location">
         <h2>Lieu de Culte</h2>
-        <p>Services disponibles à mon presbytère (à 10 minutes de Waterloo), en déplacement ou par visioconférence. .</p>
+        <p>Services disponibles à mon presbytère (à 10 minutes de Waterloo), en déplacement ou par visioconférence si besoin.
+            Téléphone: 0470 78 18 34.</p>
     </section>
 
    <footer>
