--- a/index.html
+++ b/index.html
@@ -459,5 +459,21 @@
         }
     });
 </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Révérend Constant",
+  "url": "https://reverend.be",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Octave Michotlaan 1",
+    "addressLocality": "Rhode-Saint-Genèse",
+    "postalCode": "1640",
+    "addressCountry": "BE"
+  },
+  "telephone": "0470 78 18 34"
+}
+</script>
 </body>
 </html>
