--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
         </div>
     </section>
 
-    <section class="location">
-        <h2>Lieu de Culte</h2>
-        <p>Services disponibles à mon presbytère (à 10 minutes de Waterloo), en déplacement ou par visioconférence si besoin.
-            Téléphone: 0470 78 18 34.</p>
-    </section>
+   <section class="location">
+    <h2>Lieu de Culte</h2>
+    <p>Services disponibles à mon presbytère (Octave Michotlaan 1, 1640 Rhode-Saint-Genèse), à 10 minutes de Waterloo, en déplacement ou par visioconférence si besoin.
+        Téléphone: 0470 78 18 34.</p>
+</section>
 
    <footer>
     <div class="footer-links">
