--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,10 @@
                     <p><strong>Email :</strong> constantvanguard@gmail.com</p>
                 </div>
                 <p style="margin-top: 20px;">
-                    Services disponibles à mon presbytère (Octave Michotlaan 1, 1640 Rhode-Saint-Genèse), à 10 minutes de Waterloo, en déplacement ou par visioconférence si besoin.
+                    Services disponibles : 
+                    * à mon presbytère (Octave Michotlaan 1, 1640 Rhode-Saint-Genèse, à 10 minutes de Waterloo),
+                    * en déplacement (toute la Belgiquqe)
+                    * par visioconférence (whatsapp video)
                 </p>
             </div>
             
