--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
    <section class="location">
     <h2>Lieu de Culte</h2>
-    <p>Services disponibles à mon presbytère (Octave Michotlaan 1, 1640 Rhode-Saint-Genèse), en déplacement ou par visioconférence si besoin.
+    <p>Services disponibles à mon presbytère (Octave Michotlaan 1, 1640 Rhode-Saint-Genèse), à 10 minutes de Waterloo, en déplacement ou par visioconférence si besoin.
         Téléphone: 0470 78 18 34.</p>
 </section>
 
@@ -460,6 +460,22 @@
     });
 </script>
     <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Révérend Constant",
+  "url": "https://reverend.be",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Octave Michotlaan 1",
+    "addressLocality": "Rhode-Saint-Genèse",
+    "postalCode": "1640",
+    "addressCountry": "BE"
+  },
+  "telephone": "0470 78 18 34"
+}
+</script>
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
