--- a/mariage.html
+++ b/mariage.html
@@ -398,7 +398,7 @@
             <div class="text-column">
                 <h3 class="section-title">Présentation</h3>
                 <p>
-                    Vous souhaitez vivre un mariage digne des films américains ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d'un château ou même dans une grange à l'ancienne. En tant que pasteur, j'ai à cœur de vous offrir cette liberté... En effet, nous pouvons consacrer tout lieu adapté afin qu'il devienne le cadre d'un mariage chrétien – et à fortiori, protestant – rendant ainsi l'expérience encore plus magique. Bien sûr, il est également possible d'opter pour une église, si tel est votre choix.
+                    Vous souhaitez vivre un mariage religieux dans le lieux de votre choix ? Imaginez une cérémonie dans un jardin enchanteur, dans le salon d'un château ou même dans une grange à l'ancienne. En tant que pasteur, j'ai à cœur de vous offrir cette liberté... En effet, nous pouvons consacrer tout lieu adapté afin qu'il devienne le cadre d'un mariage chrétien – et à fortiori, protestant – rendant ainsi l'expérience encore plus magique. Bien sûr, il est également possible d'opter pour une église, si tel est votre choix.
                 </p>
                 <p>
                     Cette approche plus ouverte me permet de réduire ainsi les délais d'attente et d'éviter de reporter un moment si important, tout en allégeant l'organisation.
