--- a/contact.html
+++ b/contact.html
@@ -292,23 +292,23 @@
             </div>
             
             <div class="contact-form">
-                <h3 class="section-title">Formulaire de contact</h3>
-                <form action="https://formspree.io/f/constantvanguard@gmail.com" method="POST">
-                    <div class="form-group">
-                        <label for="name">Nom :</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email :</label>
-                        <input type="email" id="email" name="_replyto" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message :</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn">Envoyer</button>
-                </form>
-            </div>
+    <h3 class="section-title">Formulaire de contact</h3>
+    <form action="https://formspree.io/f/xjkyzbek" method="POST">
+        <div class="form-group">
+            <label for="name">Nom :</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email :</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message :</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn">Envoyer</button>
+    </form>
+</div>
         </div>
     </div>
 
